attempted to add auth2, and updated swagger
